# codes

./: .gitattributes  .gitignore  Cargo.toml  PrimeTable.c  README.md  autoip.c  bsod.c  down.c  generation.c  p2gen.sh  prime2.c  prime3.c  printargs.c  tetris.c  third.c
3d/hers/: 2015-cony.stl  IMG_4504-2D.psd  IMG_4504.stl  README.md  cony2D.psd  face.stl  face2D.psd
Arduino/: README.md
Arduino/ArduinoAsADC/: ArduinoAsADC.ino
Arduino/Combined/: Combined.ino
Arduino/Keyer/: Keyer.ino  Makefile  sketch.yaml
Arduino/NTCMeasure/: NTCMeasure.ino
Arduino/TheKit/: TheKit.ino
Wolfram/: KibbleBalance.nb  MarsCoord.nb  NIST_Thermodynamics.nb  WorldCentre.nb  init.m
c/: 8bit.c  GuessNb.c  PrimeTable.c  autoip.c  bsod.c  cnsroot.c  down.c  font8x8-karnaugh.c  generation.c  idebug.c  musiccvrt.c  oa3.c  p2gen.sh  prime2.c  prime3.c  prime4.c  prime5.c  printargs.c  qm.c  sshpass-pgp.c  study-note1.c  tetris.c  thekit_pwm.c  third.c  uprec.c  zmy.c  zt_rmp.c
fortran/: .gitignore  hello_world.f
javascript/: mimicCountUp.js  toggleMenu.js
jupyter/: Atlas_ML_numpy.ipynb  Monte-Carlo.ipynb
latex/: csc_common.tex  pc_common.tex  pccommon.sty
lisp/: prime.lisp
powershell/: duf.ps1  wasteCPU.ps1
python/: 12306.py  admkcsv.py  automerger.py  autoresume.py  cnsroot.py  compute_empirical.py  conf_tinygs.py  correct.py  cplxplot.py  down3.py  down_edx.py  encrypt.py  exception_nest.py  expfit_guess.py  extract_links.py  flask_linguee.py  gen_anim_mosaic.py  gen_chemtest.py  generation.py  genname.py  healthrep.py  interp.py  lbpcal.py  magstripe.py  manage_hosts.py  parsereports.py  searchw.py  sendjunk.py  sendjunk2.py  sibsecsh.py  sniff_dhcp.py  thekitd2.py  track_bags.py  trig.py  tryagain.py  validate_detection.py  watermark.py  wave_interference.py  wnlfit.py
rpi-pico/: CMakeLists.txt  thekit4_pico_w  thekit_pico
rpi-pico/2022_lwip_httpc_bug_reprex/: CMakeLists.txt  lwipopts.h  reprex.c
rpi-pico/differential_watt_meter/: CMakeLists.txt  differential_watt_meter.c
rpi-pico/differential_watt_meter/example/: README.md  battery1.tsv  mb7p1.tsv  mb8.csv  zn1.tsv
rpi-pico/wwvb_simul/: CMakeLists.txt  ntp.c  wwvb.c  wwvb.h  wwvb_simul.c  wwvb_simul.h
ruby/: dylib_bundler.rb
rust/: async_unsend.rs  fastdown.rs  miss.rs
rust/mkf/: Cargo.toml  README.md
rust/mkf/src/: main.rs
shell/: .gitignore  add-csclub-news  auto2048.sh  btrfs_snap.sh  build_python.sh  deboook.sh  mac_extract_pw_hash.sh  mactk  mkf  nginx_access_resolverd  sibsecsh
src/: main.rs
thekit/: .gitignore  README.md  dashboard.h  thekit3_pwm.c  thekitd2.5.py  thekitd3.c
thekit/thekit4_pico_w/: CMakeLists.txt  config.h  http_server.c  light.c  lwipopts.h  mdns_fix.c  mdns_fix.h  ntp.c  tasks.c  temperature.c  thekit4_pico_w.c  thekit4_pico_w.h  wifi.c
(+78 files in other folders)
