[package]
name = "mkf"
version = "0.2.3"
authors = ["Zhang Maiyun <me@myzhangll.xyz>"]
edition = "2021"
description = "Create a temporary file from stdin and execute command"
readme = "README.md"
repository = "https://github.com/myzhang1029/codes"
license = "GPL-3.0-or-later"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
tempfile = "3"
